--- a/.github/workflows/fetch_rust_repos.yml
+++ b/.github/workflows/fetch_rust_repos.yml
@@ -10,6 +10,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: false  # Important to use our PAT
 
       - name: Set up jq
         run: sudo apt-get update && sudo apt-get install -y jq
@@ -33,13 +35,18 @@ jobs:
           echo "Total repos fetched: $(wc -l < repos.txt)"
 
       - name: Configure git to use PAT
+        env:
+          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
+          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
+          
+          # Create or switch to update branch
+          git checkout -B rust-repos-update
 
       - name: Commit and push repos.txt
         run: |
           git add repos.txt
           git commit -m "Update top Rust repos" || echo "No changes to commit"
-          git push origin main
+          git push origin rust-repos-update --force
