--- a/.github/workflows/fetch_rust_repos.yml
+++ b/.github/workflows/fetch_rust_repos.yml
@@ -11,21 +11,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          persist-credentials: false  # Important to use our PAT
+          persist-credentials: false  # Don't use default GITHUB_TOKEN
 
       - name: Set up jq
         run: sudo apt-get update && sudo apt-get install -y jq
 
       - name: Fetch top Rust repos
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           echo "Fetching top Rust repositories..."
           rm -f repos.txt
           
           for page in {1..10}; do
             echo "Fetching page $page..."
-            RESPONSE=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
+            RESPONSE=$(curl -s -H "Authorization: token $PAT_TOKEN" \
               "https://api.github.com/search/repositories?q=language:Rust+stars:>=1000&sort=stars&order=desc&page=$page&per_page=100")
             
             echo "$RESPONSE" | jq -r '.items[].html_url' >> repos.txt
@@ -34,14 +34,16 @@ jobs:
 
           echo "Total repos fetched: $(wc -l < repos.txt)"
 
-      - name: Configure git to use PAT
+      - name: Configure git with PAT
         env:
-          GITHUB_TOKEN: ${{ secrets.PAT_TOKEN }}
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git remote set-url origin https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git
-          
+
+          # Set remote URL with PAT explicitly
+          git remote set-url origin https://x-access-token:${PAT_TOKEN}@github.com/${{ github.repository }}.git
+
           # Create or switch to update branch
           git checkout -B rust-repos-update
 
