--- a/.github/workflows/rust_loc_cfp_summary_network.yml
+++ b/.github/workflows/rust_loc_cfp_summary_network.yml
@@ -3,57 +3,53 @@
           python3 - <<'PY'
 import csv, os, re
 
+# --- Helper: count COSMIC-like movements ---
 def count_movements(rs_file):
     e = x = r = w = 0
     try:
         with open(rs_file, 'r', encoding="utf-8", errors="ignore") as f:
             code = f.read()
 
-            # --- Exclude test and example code ---
-            if "mod tests" in code or "#[test]" in code or "fn main()" in code:
-                return 0,0,0,0
+            # ---- Ignore test and async code ----
+            if any(p in rs_file for p in ["tests", "examples"]):
+                return 0, 0, 0, 0
+            if "async fn " in code:
+                return 0, 0, 0, 0
 
-            # --- Exclude async functions entirely ---
-            if re.search(r'\basync\s+fn\b', code):
-                return 0,0,0,0
+            # ---- Entry (E): Public functions or struct methods ----
+            e += len(re.findall(r'pub fn ', code))
+            e += len(re.findall(r'impl\s+\w+\s*{', code))
 
-            # --- Entries (public + impl) ---
-            e += len(re.findall(r'\bpub\s+fn\s+\w+', code))
-            e += len(re.findall(r'impl\s+\w+', code))
-
-            # --- Exits (returning or printing) ---
+            # ---- Exit (X): Returns / print / network sends ----
             x += len(re.findall(r'->\s*String', code))
             x += len(re.findall(r'println!', code))
+            x += len(re.findall(r'(send|post|put|patch|delete)\s*\(', code))  # HTTP client
+            x += len(re.findall(r'\.send\(', code))  # reqwest or similar
 
-            # --- File I/O ---
+            # ---- Read (R): File / Network I/O reads ----
             r += len(re.findall(r'std::fs::read', code))
-            r += len(re.findall(r'read_to_string', code))
+            r += len(re.findall(r'std::fs::read_to_string', code))
+            r += len(re.findall(r'get\s*\(', code))  # HTTP GET
+            r += len(re.findall(r'\.recv\(', code))  # socket receive
+
+            # ---- Write (W): File / Network I/O writes ----
             w += len(re.findall(r'std::fs::write', code))
             w += len(re.findall(r'write_all', code))
-
-            # --- Network I/O ---
-            # Covers common Rust crates: reqwest, hyper, tokio, std::net
-            r += len(re.findall(r'reqwest::get', code))
-            w += len(re.findall(r'reqwest::post', code))
-            r += len(re.findall(r'Client::get', code))
-            w += len(re.findall(r'Client::post', code))
-            r += len(re.findall(r'TcpStream::connect', code))
-            w += len(re.findall(r'send\(|write_all', code))
-            r += len(re.findall(r'recv\(|read_exact', code))
-
+            w += len(re.findall(r'std::net::TcpStream', code))
+            w += len(re.findall(r'\.send\(', code))
     except Exception:
         pass
     return e, x, r, w
 
 
 input_csv = "rust_loc_results.csv"
-output_csv = "rust_loc_results_with_summary.csv"
-total_eloc = 0
-total_cfp = 0
+output_csv = "rust_loc_results_with_summary_network.csv"
+
+total_eloc = total_cfp = 0
 
 with open(input_csv) as infile, open(output_csv, 'w', newline='') as outfile:
     reader = csv.DictReader(infile)
-    fieldnames = reader.fieldnames + ["Entry","Exit","Read","Write","CFP","eLOC_per_CFP"]
+    fieldnames = reader.fieldnames + ["Entry", "Exit", "Read", "Write", "CFP", "eLOC_per_CFP"]
     writer = csv.DictWriter(outfile, fieldnames=fieldnames)
     writer.writeheader()
 
@@ -63,10 +59,10 @@ with open(input_csv) as infile, open(output_csv, 'w', newline='') as outfile:
         e_total = x_total = r_total = w_total = 0
 
         if os.path.exists(repo_dir):
-            for root,_,files in os.walk(repo_dir):
+            for root, _, files in os.walk(repo_dir):
                 for file in files:
                     if file.endswith(".rs"):
-                        e,x,r,w = count_movements(os.path.join(root,file))
+                        e, x, r, w = count_movements(os.path.join(root, file))
                         e_total += e
                         x_total += x
                         r_total += r
@@ -104,9 +100,3 @@ with open(input_csv) as infile, open(output_csv, 'w', newline='') as outfile:
         "eLOC_per_CFP": avg_ratio
     })
 PY
-
-      - name: Upload LOC + CFP + Summary (Network I/O)
-        uses: actions/upload-artifact@v4
-        with:
-          name: rust-loc-cfp-summary-network
-          path: rust_loc_results_with_summary.csv
