--- a/.github/workflows/rust_loc_cfp_summary_network.yml
+++ b/.github/workflows/rust_loc_cfp_summary_network.yml
@@ -1,102 +1,56 @@
-- name: Estimate CFP and Summary Stats (Network I/O, Async Excluded)
+name: Rust LOC + CFP Analysis with Network I/O (Async Excluded)
+
+on:
+  workflow_dispatch:       # manual trigger
+  schedule:
+    - cron: "0 4 * * 1"    # optional: every Monday at 04:00 UTC
+
+jobs:
+  analyze:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Install dependencies
         run: |
-          python3 - <<'PY'
-import csv, os, re
+          sudo apt-get update
+          sudo apt-get install -y python3 git
+          cargo install tokei
 
-# --- Helper: count COSMIC-like movements ---
-def count_movements(rs_file):
-    e = x = r = w = 0
-    try:
-        with open(rs_file, 'r', encoding="utf-8", errors="ignore") as f:
-            code = f.read()
+      - name: Prepare work directory
+        run: mkdir -p work
 
-            # ---- Ignore test and async code ----
-            if any(p in rs_file for p in ["tests", "examples"]):
-                return 0, 0, 0, 0
-            if "async fn " in code:
-                return 0, 0, 0, 0
-
-            # ---- Entry (E): Public functions or struct methods ----
-            e += len(re.findall(r'pub fn ', code))
-            e += len(re.findall(r'impl\s+\w+\s*{', code))
-
-            # ---- Exit (X): Returns / print / network sends ----
-            x += len(re.findall(r'->\s*String', code))
-            x += len(re.findall(r'println!', code))
-            x += len(re.findall(r'(send|post|put|patch|delete)\s*\(', code))  # HTTP client
-            x += len(re.findall(r'\.send\(', code))  # reqwest or similar
-
-            # ---- Read (R): File / Network I/O reads ----
-            r += len(re.findall(r'std::fs::read', code))
-            r += len(re.findall(r'std::fs::read_to_string', code))
-            r += len(re.findall(r'get\s*\(', code))  # HTTP GET
-            r += len(re.findall(r'\.recv\(', code))  # socket receive
-
-            # ---- Write (W): File / Network I/O writes ----
-            w += len(re.findall(r'std::fs::write', code))
-            w += len(re.findall(r'write_all', code))
-            w += len(re.findall(r'std::net::TcpStream', code))
-            w += len(re.findall(r'\.send\(', code))
-    except Exception:
-        pass
-    return e, x, r, w
-
-
-input_csv = "rust_loc_results.csv"
-output_csv = "rust_loc_results_with_summary_network.csv"
-
-total_eloc = total_cfp = 0
-
-with open(input_csv) as infile, open(output_csv, 'w', newline='') as outfile:
-    reader = csv.DictReader(infile)
-    fieldnames = reader.fieldnames + ["Entry", "Exit", "Read", "Write", "CFP", "eLOC_per_CFP"]
-    writer = csv.DictWriter(outfile, fieldnames=fieldnames)
-    writer.writeheader()
-
-    for row in reader:
-        repo = row["repo"]
-        repo_dir = os.path.join("work", repo.replace("/", "_"))
-        e_total = x_total = r_total = w_total = 0
-
-        if os.path.exists(repo_dir):
-            for root, _, files in os.walk(repo_dir):
-                for file in files:
-                    if file.endswith(".rs"):
-                        e, x, r, w = count_movements(os.path.join(root, file))
-                        e_total += e
-                        x_total += x
-                        r_total += r
-                        w_total += w
-
-        cfp = e_total + x_total + r_total + w_total
-        eloc = int(row.get("rust_code", 0) or 0)
-        ratio = round(eloc / cfp, 2) if cfp > 0 else 0
-
-        total_eloc += eloc
-        total_cfp += cfp
-
-        row.update({
-            "Entry": e_total,
-            "Exit": x_total,
-            "Read": r_total,
-            "Write": w_total,
-            "CFP": cfp,
-            "eLOC_per_CFP": ratio
-        })
-        writer.writerow(row)
-
-    avg_ratio = round(total_eloc / total_cfp, 2) if total_cfp > 0 else 0
-    writer.writerow({
-        "repo": "TOTAL SUMMARY",
-        "rust_files": "",
-        "rust_code": total_eloc,
-        "rust_comments": "",
-        "rust_blanks": "",
-        "Entry": "",
-        "Exit": "",
-        "Read": "",
-        "Write": "",
-        "CFP": total_cfp,
-        "eLOC_per_CFP": avg_ratio
-    })
+      - name: Clone repos and run tokei
+        run: |
+          echo "repo,rust_files,rust_code,rust_comments,rust_blanks" > rust_loc_results.csv
+          while read -r repo; do
+            [[ -z "$repo" ]] && continue
+            echo "Processing $repo..."
+            dir="work/$(echo "$repo" | tr / _)"
+            git clone --depth 1 "https://github.com/$repo.git" "$dir" --quiet || continue
+            tokei "$dir" --output json > "$dir/tokei.json"
+            python3 - "$repo" "$dir/tokei.json" <<'PY'
+import json, sys
+repo = sys.argv[1]; path = sys.argv[2]
+try:
+    with open(path) as f: data = json.load(f)
+    rust = data.get("Rust") or data.get("rust")
+    if rust:
+        print(f"{repo},{rust.get('files',0)},{rust.get('code',0)},{rust.get('comments',0)},{rust.get('blanks',0)}")
+    else:
+        print(f"{repo},0,0,0,0")
+except Exception:
+    print(f"{repo},0,0,0,0")
 PY
+          done < repos.txt >> rust_loc_results.csv
+
+      - name: Estimate CFP and Summary Stats (Network I/O, Async Excluded)
+        run: python3 scripts/analyze_loc_cfp_network.py
+
+      - name: Upload LOC + CFP + Summary
+        uses: actions/upload-artifact@v4
+        with:
+          name: rust-loc-cfp-summary-network
+          path: rust_loc_results_with_summary_network.csv
